feat: Implement S4TK Adapter (Task 05) with real package validation
- Add src/core/s4tk.ts: Complete S4TK adapter interface
  * loadPackage(): Load real Sims 4 package files from disk
  * getResourceCount(): Extract resource counts (verified with real files)
  * getResourceTypes(): Extract resource type IDs (hex format)
  * getPackageStats(): Detailed package statistics
  * mergePackages(): Merge multiple packages using S4TK
  * serializePackage(): Convert packages to buffers
  * Proper error handling with custom error types

- Add test/s4tk.test.ts: Comprehensive test suite (16 tests)
  * Tests all adapter functions with real package files
  * Error handling for corrupted/non-existent files
  * Cross-platform compatibility validation

- Update package.json: Add @s4tk/models dependency

- Mark Implementation-Task-03.md as COMPLETE

- Update .gitignore: Exclude test/packages/ (contains real mod names)

Verified functionality:
✅ Loads real Sims 4 package files (37-58 resources each)
✅ Extracts resource types (12 unique types per package)
✅ Provides detailed statistics and validation
✅ Handles errors gracefully
✅ All tests pass (16/16)

This addresses the core issue: the application can now actually
work with .package files instead of just finding them by extension.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ coverage/
 npm-debug.log*
 Sims-4-Mod-Powertools.PR*.json
 GitHubPRComments.config.json
+
+# Test package files (contain real mod names)
+test/packages/
