--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@s4tk/models": "^0.6.14",
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0"
   },
